--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "express-fileupload": "^1.4.3"
+    "express-fileupload": "^1.4.3",
+    "express-session": "^1.18.0"
   },
   "name": "startbootstrap-clean-blog-gh-pages",
   "version": "1.0.0",
