--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "start": "nodemon index.js"
   },
   "author": "Ipule Pipi",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "21.6.2"
+  }
+
 }
